Fix figcaption corners not fully overlapping

--- a/static/css/general.css
+++ b/static/css/general.css
@@ -122,7 +122,7 @@ figure {
 figcaption {
   background-color: var(--color-surface);
   padding: var(--spacing-tiny);
-  padding-top: calc(var(--spacing-tiny) + var(--corner-radius-small));
-  margin-top: calc(-1 * var(--corner-radius-small));
+  padding-top: calc(var(--spacing-tiny) + 2 * var(--corner-radius-small));
+  margin-top: calc(-2 * var(--corner-radius-small));
   border-radius: var(--corner-radius-small);
 }
